Fragment to add actions

--- a/Multivac/app/src/main/AndroidManifest.xml
+++ b/Multivac/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="multivac.com.multivac" >
 
     <application
+        android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +17,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="multivac.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="multivac.com.multivac.Event, multivac.com.multivac.Act, multivac.com.multivac.EventAct" />
     </application>
 
 </manifest>
