Fragments for Events, Events->Actions and Devices.

--- a/Multivac/app/src/main/AndroidManifest.xml
+++ b/Multivac/app/src/main/AndroidManifest.xml
@@ -23,10 +23,10 @@
             android:value="multivac.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="1" />
+            android:value="2" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="multivac.com.multivac.Event, multivac.com.multivac.Act, multivac.com.multivac.EventAct" />
+            android:value="multivac.com.multivac.Event, multivac.com.multivac.Act, multivac.com.multivac.EventAct, multivac.com.multivac.Device"/>
     </application>
 
 </manifest>
