--- a/Multivac/app/build.gradle
+++ b/Multivac/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.loopj.android:android-async-http:1.4.5'
 }
