--- a/Multivac/app/src/main/AndroidManifest.xml
+++ b/Multivac/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
     <application
         android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
